--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -6,6 +6,7 @@
     "display": "standalone",
     "Scope": "/",
     "start_url": "index.html",
+    "gcm_sender_id": "729549406278",
     "icons": [
       {
         "src": "images/icons/icon-72x72.png",
